# ashare-pilot

./: .gitignore  README.md  pyproject.toml
docs/: design.md  散户亏钱的经典陷阱.md  行情判断方法论.md
src/ashare_pilot/: __init__.py  cli.py  config.py
src/ashare_pilot/analysis/: __init__.py  cost.py  strength.py
src/ashare_pilot/backtest/: __init__.py
src/ashare_pilot/datasource/: __init__.py  akshare_source.py  base.py  cached_source.py  fallback_source.py  stockapi_source.py  tencent_source.py
src/ashare_pilot/execution/: __init__.py  broker.py
src/ashare_pilot/indicators/: __init__.py
src/ashare_pilot/notify/: __init__.py
src/ashare_pilot/screener/: __init__.py
src/ashare_pilot/strategy/: __init__.py  breakout.py  golden_cross.py
tests/: test_backtest.py  test_breakout.py  test_cached_source.py  test_cost.py  test_data_integrity.py  test_datasource.py  test_default_source.py  test_execution.py  test_fallback_source.py  test_indicators.py  test_scan_breakouts.py  test_screener.py  test_stockapi_source.py  test_strategy.py  test_strength.py  test_tencent_source.py
