[project]
name = "ashare-pilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "maczam", email = "maczam@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.18.64",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
]

[project.scripts]
ashare-pilot = "ashare_pilot:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
